--- a/views/Log-in.html
+++ b/views/Log-in.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
 
     <link rel="icon" href="images/favicon.ico">
-    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link rel="stylesheet" href="Log-in.css">
+    <meta charset="UTF-8">
+
     <title>Login</title>
 </head>
 
@@ -22,21 +23,19 @@
     </nav>
 
     <div class="login-block">
-        <h1>Login</h1>
+        <h1>
+            Login
+        </h1>
         <form action="/Log-In" method="POST">
             <input name="id" type="text" placeholder="ID" id="Id" maxlength="9" />
             <input maxlength="15" minlength="8" name="password" type="password" placeholder="Password" id="password" />
-            <button type="submit">Log In</button>
+            <button type="submit">
+                Log In
+            </button>
             <br><br>
         </form>
         <a href="ForgotPW.html"><button>Forget Password</button></a>
     </div>
-
-    <script> 
-    function setID(){
-        localStorage.setItem('id', id);
-    }
-    </script>
 </body>
 
 </html>
