--- a/views/Home.html
+++ b/views/Home.html
@@ -24,6 +24,8 @@
         
         body {
             font-size: 16px;
+            background-image: url("images/bg.jpg");
+            background-size: cover;
         }
         
         .w3-half img {
@@ -40,13 +42,12 @@
 </head>
 
 <body>
-    <img class="Bank" src="https://img.freepik.com/premium-vector/cartoon-retro-bank-building-courthouse-with-columns-illustration-isolated-white_53562-8133.jpg?w=2000" alt="Bank">
 
     <!-- Sidebar/menu -->
     <nav class="w3-sidebar w3-red w3-collapse w3-top w3-large w3-padding" style="z-index:3;width:300px;font-weight:bold;" id="mySidebar"><br>
         <a href="javascript:void(0)" onclick="w3_close()" class="w3-button w3-hide-large w3-display-topleft" style="width:100%;font-size:22px">Close Menu</a>
         <div class="w3-container">
-            <h3 class="w3-padding-64"><b>Community bank</b></h3>
+            <h3 class="w3-padding-64"><b>Digital WareHouse</b></h3>
         </div>
         <div class="w3-bar-block">
             <a href="#" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Home</a>
@@ -82,7 +83,7 @@
 
         <!-- Header -->
         <div class="w3-container" style="margin-top:80px" id="showcase">
-            <h1 class="w3-jumbo"><b>Bank</b></h1>
+            <h1 class="w3-jumbo"><b>WareHouse</b></h1>
             <h1 class="w3-xxxlarge w3-text-red"><b>Showcase.</b></h1>
             <hr style="width:50px;border:5px solid #2f990f" class="w3-round">
         </div>
@@ -105,7 +106,7 @@
             </p>
             <p>
                 <h2>
-                    
+
                 </h2>
             </p>
         </div>
