--- a/views/policy.html
+++ b/views/policy.html
@@ -7,6 +7,7 @@
 Policy of the Ware house : 
 </p>
 <h>for Now You Can git the products to only week , or untill we ask for him </h>
+<h> The Admin have the right to ask back for the products in every time he want , for working on stuff in the college </h>
 
 </body>
 </html>
