Adding the list

--- a/views/Sign-Up-Customer.html
+++ b/views/Sign-Up-Customer.html
@@ -21,7 +21,7 @@
     </nav>
 
     <div class="login-block">
-        <h1><i> Sign Up As Customer</i></h1>
+        <h1><i> Sign Up As Student</i></h1>
         <form action="/Sign-Up" method="POST">
             <select name="Gender" id="id">
             <option value="Male">Male</option>
@@ -37,7 +37,7 @@
             <input name="Phone" type="tel" placeholder="Phone" maxlength="10" />
             <input name="password" type="password" placeholder="Password" id="passw" minlength="8" maxlength="15" />
             <input name="email" type="email" placeholder="Email" />
-            <input name="Roll" type="text" placeholder="Roll" value="customer"/>
+            <input name="Roll" type="text" placeholder="Roll" value="Student"/>
 
             <button type="submit">Register</button>
 
