--- a/views/Sign-Up-Service.html
+++ b/views/Sign-Up-Service.html
@@ -22,7 +22,7 @@
     </nav>
 
     <div class="login-block">
-        <h1><i> Sign Up As Service Representative</i></h1>
+        <h1><i> Sign Up As Lecture</i></h1>
         <form action="/Sign-Up" method="POST">
             <select name="gender" id="id">
             <option value="Male">Male</option>
@@ -35,7 +35,7 @@
             <input name="password" type="password" placeholder="Password" id="passw" minlength="8" maxlength="15" />
             <input name="email" type="email" placeholder="Email" />
             <input name="Birthdate" type="date">
-            <input name="Roll" type="text" placeholder="Roll" value="Employee" />
+            <input name="Roll" type="text" placeholder="Roll" value="Lecture" />
             <button type="submit">Register</button>
 
             <!--<input name="age" type="number"  placeholder="age"/
