--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -24,6 +24,8 @@
         
         body {
             font-size: 16px;
+            background-image: url("images/admin.jpg");
+            background-size: cover;
         }
         
         .w3-half img {
