--- a/views/Home.html
+++ b/views/Home.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Home Page</title>
+    <link rel="icon" type="image/x-icon" href="/images/bg3.jpg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <link rel="icon" href="images/favicon.ico">
@@ -24,7 +25,7 @@
         
         body {
             font-size: 16px;
-            background-image: url("images/bg.jpg");
+            background-image: url("images/bg2.jpg");
             background-size: cover;
         }
         
