--- a/views/Profile-Service1.ejs
+++ b/views/Profile-Service1.ejs
@@ -54,9 +54,6 @@
         
         <div class="w3-bar-block">
             <a href="#" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Lecture</a> 
-            
-            
-            <a href="#Welcome" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Welcome</a>
 
         </div>
        
@@ -64,6 +61,12 @@
         <br>
         </div>
         <a href="Log-out" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Log-Out</a>
+        </div>
+        <a href="ListProdLe.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">List of Products</a>
+        <br>
+        <a href="policy.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Policy</a>
+        <br>
+        <a href="policyprod.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Policy of Products</a>
         </div>
 
         </ul>
