--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -54,15 +54,19 @@
 
 
             <a href="#" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Admin</a>
-
-            <a href="#Opening Hours" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Opening Hours</a>
-
         </div>
         </div>
         <br>
          </div>
      
         </div>
+        <a href="ListProdAd.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">List of Products</a>
+        <br>
+        <a href="policy.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Policy</a>
+        <br>
+        <a href="policyprod.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Policy of Products</a>
+        <br>
+        <a href="AddProduct.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">AddProduct</a>
         
 
         </div>
