--- a/views/Profile-Service1.ejs
+++ b/views/Profile-Service1.ejs
@@ -58,7 +58,7 @@
         </div>
         <br>
         </div>
-        <a href="ListProdLe.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">List of Products</a>
+        <a href="ListProdLe" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">List of Products</a>
         <br>
         <a href="policy.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Policy</a>
         <br>
