--- a/views/profile-cos.ejs
+++ b/views/profile-cos.ejs
@@ -85,7 +85,7 @@
         </div>
         
         </div>
-        <a href="ListProdLe.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">List of Products</a>
+        <a href="ListProd" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">List of Products</a>
         <br>
         <a href="policy.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Policy</a>
         <br>
