--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -60,7 +60,7 @@
          </div>
      
         </div>
-        <a href="ListProdAd.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">List of Products</a>
+        <a href="ListProdAd" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">List of Products</a>
         <br>
         <a href="policy.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Policy</a>
         <br>
