--- a/views/policy.html
+++ b/views/policy.html
@@ -1,118 +1,62 @@
 <!DOCTYPE html>
 <html>
 <head>
-<style>
-table, th, td {
-  border: 1px solid rgb(204, 22, 22);
-  border-collapse: collapse;
+  <link rel="stylesheet" href="List.css">
+  <style>
+    html, body, div, p, ul, li {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 100;
 }
-th, td {
-  background-color: #db0b0b;
+
+/* This class is applied to the containing div <div class="nav"> and is used to set the background color and height of the navbar */
+.nav {
+  background: #000;
+  height: 60px; /* set same as height & line-height below */
 }
+
+/* This rule centers the nav items verticaly in the bar with the height and line height properties. Spacing between the nav items is controlled by setting right and left padding.  */
+.nav li {
+  display: inline-block;
+  list-style: none;
+  height: 60px; /* should be the same as line-height */
+  line-height: 60px; /* should be the same as height */
+  padding: 0 40px; /* "0" sets top and bottom padding to none */
+}
+
+/* :hover allows you change the background color of the nav items when you mouse over them. Play around with the transition value to change the speed of the hover transition. */
+.nav li:hover {
+  background: red;
+  transition: background .3s;
+}
+
+/* This rule is applied to the link <a> tag. It lets you turn off the link underline and set the link text color. */
+.nav-link {
+  color: #fff;
+  text-decoration: none;
+}
+
+
+body {
+  background-image: url("images/bg4.jpg");
+  background-size: cover;
+ }
+      
 </style>
 </head>
 <body>
-
-</body>
+  <div class="nav">
+    <ul>
+      <li><a href="profile-cos" class="nav-link">Profile</a></li>
+      <li><a href="policy.html" class="nav-link"><em>Policy</em></a></li>
+      <li><a href="policyprod.html" class="nav-link">policy Products</a></li>
+      <li><a href="Log-in.html" class="nav-link">Log Out</a></li>
+    </ul>
+  </div>
+  </body>
 </html>
-
-
-
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <style>
-    * {box-sizing: border-box;}
-    
-    body { 
-      margin: 0;
-      font-family: Arial, Helvetica, sans-serif;
-    }
-    
-    #navbar {
-      overflow: hidden;
-      background-color: #de2222;
-      padding: 90px 10px;
-      transition: 0.4s;
-      position: fixed;
-      width: 100%;
-      top: 0;
-      z-index: 99;
-    }
-    
-    #navbar a {
-      float: left;
-      color: rgb(249, 247, 247);
-      text-align: center;
-      padding: 12px;
-      text-decoration: none;
-      font-size: 18px; 
-      line-height: 25px;
-      border-radius: 4px;
-    }
-    
-    #navbar #logo {
-      font-size: 35px;
-      font-weight: bold;
-      transition: 0.4s;
-    }
-    
-    #navbar a:hover {
-      background-color: #ddd;
-      color: rgb(248, 244, 244);
-    }
-    
-    #navbar a.active {
-      background-color: dodgerblue;
-      color: white;
-    }
-    
-    #navbar-right {
-      float: right;
-    }
-    
-    @media screen and (max-width: 580px) {
-      #navbar {
-        padding: 20px 10px !important;
-      }
-      #navbar a {
-        float: none;
-        display: block;
-        text-align: left;
-      }
-      #navbar-right {
-        float: none;
-      }
-    }
-    </style>
-    </head>
-    <body>
-    
-    <div id="navbar">
-      <a href="#" id="logo">WareHouse</a>
-      <div id="navbar-right">
-        <a href="Log-in.html">Log Out</a>
-      </div>
-    </div>
-    
-    <div style="margin-top:210px;padding:15px 15px 2500px;font-size:30px">
-      <p><b></b></p>
-      <p></p>
-      <p></p>
-      <p><b></b></p>
-      <p></p>
-    </div>
-    
-    <script>
-    // When the user scrolls down 80px from the top of the document, resize the navbar's padding and the logo's font size
-    window.onscroll = function() {scrollFunction()};
-    
-    function scrollFunction() {
-      if (document.body.scrollTop > 80 || document.documentElement.scrollTop > 80) {
-        document.getElementById("navbar").style.padding = "30px 10px";
-        document.getElementById("logo").style.fontSize = "25px";
-      } else {
-        document.getElementById("navbar").style.padding = "80px 10px";
-        document.getElementById("logo").style.fontSize = "35px";
-      }
-    }
-    </script>
-    
