jenkins and fixes

--- a/views/Home.html
+++ b/views/Home.html
@@ -52,9 +52,9 @@
         </div>
         <div class="w3-bar-block">
             <a href="#" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Home</a>
-            <a href="#showcase" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Showcase</a>
-            <a href="#Aboutus" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">About Us</a>
-            <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Contact</a>
+            <a href="policy.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Policy</a>
+            <a href="policyprod.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Policy Products</a>
+            
             <!-- <a href="Sign-Up.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Sign Up</a> -->
             <div class="dropdown">
                 <button class="btn  dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -66,7 +66,9 @@
                     <li><a class="dropdown-item" href="Sign-Up-Service.html">Sign-Up-lecturer</a></li>
                 </ul>
             </div>
-            <a href="Log-in.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">LogIn</a>
+            <a href="Log-in.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Log-in</a>
+            
+            
         </div>
     </nav>
 
