--- a/views/Profile-Service1.ejs
+++ b/views/Profile-Service1.ejs
@@ -36,6 +36,10 @@
         .w3-half img:hover {
             opacity: 1
         }
+        body {
+            background-image: url("images/bg4.jpg");
+            background-size: cover;
+         }
     </style>
 </head>
 
@@ -59,10 +63,7 @@
         <br>
         </div>
         <a href="ListProdLe" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">List of Products</a>
-        <br>
-        <a href="policy.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Policy</a>
-        <br>
-        <a href="policyprod.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Policy of Products</a>
+    
         <br>
         <a href="Log-out" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Log-Out</a>
         </div>
