--- a/views/policy.html
+++ b/views/policy.html
@@ -43,20 +43,131 @@
 
 
 body {
-  background-image: url("images/bg4.jpg");
+  background-image: url("images/bg2.jpg");
   background-size: cover;
  }
+
+
+ * {
+  box-sizing:border-box;
+}
+
+body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.container {
+  padding: 64px;
+}
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both
+}
+
+.column-66 {
+  float: left;
+  width: 66.66666%;
+  padding: 20px;
+}
+
+.column-33 {
+  float: left;
+  width: 33.33333%;
+  padding: 20px;
+}
+
+.large-font {
+  font-size: 60px;
+}
+
+.xlarge-font {
+  font-size: 64px
+}
+
+.button {
+  border: none;
+  color: white;
+  padding: 14px 28px;
+  font-size: 16px;
+  cursor: pointer;
+  background-color: #04AA6D;
+}
+
+img {
+  display: block;
+  height: auto;
+  max-width: 100%;
+}
+
+@media screen and (max-width: 1000px) {
+  .column-66,
+  .column-33 {
+    width: 100%;
+    text-align: center;
+  }
+  img {
+    margin: auto;
+  }
+}
       
 </style>
 </head>
 <body>
   <div class="nav">
     <ul>
-      <li><a href="profile-cos" class="nav-link">Profile</a></li>
+      <li><a href="Home.html" class="nav-link">Home</a></li>
       <li><a href="policy.html" class="nav-link"><em>Policy</em></a></li>
       <li><a href="policyprod.html" class="nav-link">policy Products</a></li>
-      <li><a href="Log-in.html" class="nav-link">Log Out</a></li>
+      <li><a href="Log-in.html" class="nav-link">Log in</a></li>
     </ul>
   </div>
+
+
+  <div class="container">
+    <div class="row">
+      <div class="column-66">
+        <h1 class="xlarge-font"><b>Ware House</b></h1>
+        <h1 class="large-font" style="color:MediumSeaGreen;"><b>Privacy</b></h1>
+        <p><span style="font-size:36px">1.Privacy and Data Protection:We prioritize the protection of your privacy and personal information. By using our website, you consent to the collection and processing of your data in accordance with our Privacy Policy.</span> </p>
+      </div>
+      <div class="column-33">
+          <img src="/images/bg3.jpg" width="335" height="471">
+      </div>
+    </div>
+  </div>
+  
+  <!-- Clarity Section -->
+  <div class="container" style="background-color:#f1f1f1">
+    <div class="row">
+      <div class="column-33">
+        <img src="/images/bg3.jpg" alt="App" width="335" height="471">
+      </div>
+      <div class="column-66">
+        <h1 class="xlarge-font"><b>Users</b></h1>
+        <h1 class="large-font" style="color:red;"><b>Responsibilities</b></h1>
+        <p><span style="font-size:24px">Users are responsible for maintaining the confidentiality of their account information and their Orderd products. Any activity conducted under a user's account is their own responsibility.</span> </p>
+      </div>
+    </div>
+  </div>
+  
+  <!-- The App Section -->
+  <div class="container">
+    <div class="row">
+      <div class="column-66">
+        <h1 class="xlarge-font"><b>Order</b></h1>
+        <h1 class="large-font" style="color:MediumSeaGreen;"><b>Orders Res</b></h1>
+        <p><span style="font-size:36px">Users may place orders for products or services through our website. By placing an order, users agree to provide accurate and complete information, including billing and shipping details.</span> </p>
+      </div>
+      <div class="column-33">
+          <img src="/images/bg3.jpg" width="335" height="471" >
+      </div>
+    </div>
+  </div>
+  
+
+
   </body>
 </html>
