--- a/views/policyprod.html
+++ b/views/policyprod.html
@@ -45,17 +45,16 @@
 body {
   background-image: url("images/bg4.jpg");
   background-size: cover;
- }
-      
+ }   
 </style>
 </head>
 <body>
   <div class="nav">
     <ul>
-      <li><a href="profile-cos" class="nav-link">Profile</a></li>
+      <li><a href="Home.html" class="nav-link">Home</a></li>
       <li><a href="policy.html" class="nav-link"><em>Policy</em></a></li>
       <li><a href="policyprod.html" class="nav-link">policy Products</a></li>
-      <li><a href="Log-in.html" class="nav-link">Log Out</a></li>
+      <li><a href="Log-in.html" class="nav-link">Log in</a></li>
     </ul>
   </div>
   </body>
