--- a/views/profile-cos.ejs
+++ b/views/profile-cos.ejs
@@ -15,15 +15,9 @@
     <style>
 
     body {
-
-  
-    
-        background-image: url('bg5.jpg');
-        background-repeat: no-repeat;
-        background-attachment: fixed;
-        background-size: cover;
-
-    }
+  background-image: url("images/bg4.jpg");
+  background-size: cover;
+        }
 
     
         body,
@@ -87,10 +81,6 @@
         </div>
         <a href="ListProd" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">List of Products</a>
         <br>
-        <a href="policy.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Policy</a>
-        <br>
-        <a href="policyprod.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Policy of Products</a>
-        <br>
         <a href="Log-out" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Log-Out</a>
         </div>
         <br>        
@@ -111,13 +101,7 @@
     <div class="w3-main" style="margin-left:340px;margin-right:40px">
 
        
-
-
-       
-
-    
-
-       
+ 
     </div>
 </body>
 
