--- a/views/ListProd.ejs
+++ b/views/ListProd.ejs
@@ -53,8 +53,6 @@ body {
   <div class="nav">
     <ul>
       <li><a href="profile-cos" class="nav-link">Profile</a></li>
-      <li><a href="policy.html" class="nav-link"><em>Policy</em></a></li>
-      <li><a href="policyprod.html" class="nav-link">policy Products</a></li>
       <li><a href="Log-in.html" class="nav-link">Log Out</a></li>
     </ul>
   </div>
@@ -68,6 +66,9 @@ body {
         </th>
         <th>
           Amount
+        </th>
+        <th>
+          Date
         </th>
         <th>
           Order
@@ -85,6 +86,11 @@ body {
         <td>
           <p>
             <%= Prod.Amount %>
+          </p>
+        </td>
+        <td>
+          <p>
+            <%= Prod.Date %>
           </p>
         </td>
         <td class='select'>
