--- a/views/Addproduct.html
+++ b/views/Addproduct.html
@@ -65,6 +65,7 @@
     <div class="login-block">
         <h1><i> Add Product </i></h1>
         <form action="/AddProduct" method="POST">
+            <input name="Id" type="number" placeholder="Id"  />
             <input name="Name" type="text" placeholder="Name"  />
             <input name="Amount" type="number" placeholder="Amount" />
             <input name="Date" type="date" placeholder="Date" />
