--- a/views/profile-cos.ejs
+++ b/views/profile-cos.ejs
@@ -73,8 +73,9 @@
             <h3 class="w3-padding-64"><b>Student Profile</b></h3>
         </div>
         <div class="w3-bar-block">
-            <a href="#" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Stuednt</a>
-        </div>
+            <a href="#" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Student : <%= user.FirstName  %></a>
+          </div>
+          
         
         </div>
         
