--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -51,7 +51,7 @@
             <h3 class="w3-padding-64"><b>WareHouse</b></h3>
         </div>
         <div class="w3-bar-block">  
-            <a href="#" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Admin</a>
+            <a href="#" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Admin : <%= user.FirstName  %></a>
 
         </div>
         </div>
