--- a/views/Profile-Service1.ejs
+++ b/views/Profile-Service1.ejs
@@ -57,7 +57,7 @@
 
         
         <div class="w3-bar-block">
-            <a href="#" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Lecture : <%= user.FirstName  %></a> 
+            <a href="#" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Lecture : <%= user.FirstName  %> <%= user.LastName%></a> 
         </div>
         </div>
         <br>
