--- a/views/Profile-Service1.ejs
+++ b/views/Profile-Service1.ejs
@@ -37,7 +37,7 @@
             opacity: 1
         }
         body {
-            background-image: url("images/bg4.jpg");
+            background-image: url("images/r.png");
             background-size: cover;
          }
     </style>
@@ -62,7 +62,7 @@
         </div>
         <br>
         </div>
-        <a href="ListProdLe" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">List of Products</a>
+        <a href="ListProd" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">List of Products</a>
     
         <br>
         <a href="Log-out" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Log-Out</a>
