--- a/views/profile-cos.ejs
+++ b/views/profile-cos.ejs
@@ -15,7 +15,7 @@
     <style>
 
     body {
-  background-image: url("images/bg4.jpg");
+  background-image: url("images/r.png");
   background-size: cover;
         }
 
