--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -24,7 +24,7 @@
         
         body {
             font-size: 16px;
-            background-image: url("images/bg4.jpg");
+            background-image: url("images/r.png");
             background-size: cover;
         }
         
