--- a/views/myDevices.ejs
+++ b/views/myDevices.ejs
@@ -8,6 +8,8 @@
             flex-direction: column;
             align-items: center;
             font-family: Arial, sans-serif;
+            background-image: url("images/r.png");
+            background-size: cover;
         }
 
         h1 {
