--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -61,7 +61,7 @@
         </div>
         <a href="ListProdAd" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">List of Products</a>
         <br>
-        <a href="AddProduct.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">AddProduct</a>
+        <a href="AddProduct.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">AddProduct/Prodcast-Studio</a>
         
 
         </div>
