--- a/views/Profile-Service1.ejs
+++ b/views/Profile-Service1.ejs
@@ -65,6 +65,8 @@
         <a href="ListProd" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">List of Products</a>
     
         <br>
+        <a href="Reports" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Report</a>
+        <br>
         <a href="Log-out" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Log-Out</a>
         </div>
 
