--- a/views/profile-cos.ejs
+++ b/views/profile-cos.ejs
@@ -84,6 +84,8 @@
         <br>
         <a href="/mydevices" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">My devices</a>
         <br>
+        <a href="Reports" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Report</a>
+        <br>
         <a href="Log-out" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Log-Out</a>
         </div>
         <br>        
